--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,6 +40,7 @@
       src: etcd3.service.j2
       dest: /etc/systemd/system/etcd3.service
       mode: 0444
+  notify: restart etcd3
 
 - name: Systemd changes
   systemd:
