--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,8 @@
+rolename: etcdv3
 etcd_version: 3.2.18
 etcd_unarchive_prefix: /usr/etcd
 etcd_version_target: "etcd Version: {{ etcd_version }}"
 etcd_cluster_name: etcd_cluster
 etcd_link: "https://github.com/coreos/etcd/releases/download/v{{ etcd_version }}/etcd-v{{ etcd_version }}-linux-amd64.tar.gz"
+etcd_nodes: "{{ ansible_play_hosts }}"
+etcd_firewalld_trust: false
