--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,8 @@
 
 - import_tasks: install.yml
 
-#- import_tasks: firewalld.yml
+- import_tasks: firewalld.yml
+  when: etcd_firewalld_trust
 
 - import_tasks: service.yml
 
